--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,9 @@
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:layout_width="395dp"
-            android:layout_height="715dp"
+            tools:listitem="@layout/list_item_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
