--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
+              android:background="?android:attr/selectableItemBackground"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:paddingTop="8dp"
-              android:paddingBottom="8dp"
+              android:paddingTop="24dp"
+              android:paddingBottom="24dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp">
 
     <ImageView
+            android:id="@+id/topic_image"
             android:src="@mipmap/ic_launcher_round"
             android:layout_width="35dp"
             android:layout_height="35dp"
