--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -59,7 +59,7 @@
 
     <Button
             android:id="@+id/start_quiz_button"
-            android:text="@string/start_the_quiz"
+            android:text="@string/begin"
             android:textSize="8pt"
             android:padding="24dp"
             android:layout_width="wrap_content"
