--- a/app/src/main/res/layout/activity_answer.xml
+++ b/app/src/main/res/layout/activity_answer.xml
@@ -8,9 +8,8 @@
     <TextView
             android:id="@+id/correct_answer_label"
             android:text="TextView"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:gravity="center"
-
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -26,7 +25,7 @@
     <TextView
             android:id="@+id/user_answer_label"
             android:text="TextView"
-            android:textSize="20dp"
+            android:textSize="25dp"
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -43,7 +42,7 @@
     <TextView
             android:id="@+id/num_correct_label"
             android:text="TextView"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -60,8 +59,10 @@
     <Button
             android:id="@+id/answer_button"
             android:text="Button"
+            android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
