Add question fragment; Make adjustments to overview fragment

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -10,7 +10,7 @@
             android:text="TextView"
             android:gravity="center"
             android:layout_weight="1"
-            android:textSize="15pt"
+            android:textSize="22pt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -23,7 +23,7 @@
     <TextView
             android:id="@+id/topic_description_label"
             android:text="TextView"
-            android:textSize="10pt"
+            android:textSize="12pt"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
     <TextView
             android:id="@+id/topic_num_questions_label"
             android:text="TextView"
-            android:textSize="10pt"
+            android:textSize="12pt"
             android:gravity="center"
             android:layout_weight="1"
             android:layout_width="match_parent"
@@ -57,7 +57,10 @@
             android:layout_weight="0"
             android:layout_gravity="center"
             android:textSize="8pt"
-            android:padding="24dp"
+            android:paddingLeft="36dp"
+            android:paddingRight="36dp"
+            android:paddingTop="24dp"
+            android:paddingBottom="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
