--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".QuestionFragment">
+             tools:context="fragments.QuestionFragment">
 
     <TextView
             android:id="@+id/question_text"
