--- a/app/src/main/res/layout/list_item_view.xml
+++ b/app/src/main/res/layout/list_item_view.xml
@@ -12,20 +12,39 @@
     <ImageView
             android:id="@+id/topic_image"
             android:src="@mipmap/ic_launcher_round"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
     />
 
-    <TextView
-            android:id="@+id/topic_tv"
-            android:text="Test"
-            android:textSize="12pt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-    />
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:layout_weight="1"
+    >
+        <TextView
+                android:id="@+id/topic_tv"
+                android:text="Test"
+                android:textSize="12pt"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+        />
 
+        <TextView
+                android:id="@+id/short_desc"
+                android:text="Test"
+                android:textSize="8pt"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
+        />
+    </LinearLayout>
 </LinearLayout>
